# aurora_crew_agent

./: .gitignore  README.md  pyproject.toml
src/aurora_shopping_assistant/: crew.py  main.py
src/aurora_shopping_assistant/config/: agents.yaml  tasks.yaml
src/aurora_shopping_assistant/tools/: __init__.py  create_order_tool.py  get_order_status_tool.py  get_product_tool.py  list_products_tool.py
