[project]
name = "aurora_shopping_assistant"
version = "0.1.0"
description = "aurora-shopping-assistant using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "aiohttp>=3.13.5",
    "crewai[tools]==1.14.4",
    "litellm>=1.84.0",
]

[project.scripts]
aurora_shopping_assistant = "aurora_shopping_assistant.main:run"
run_crew = "aurora_shopping_assistant.main:run"
train = "aurora_shopping_assistant.main:train"
replay = "aurora_shopping_assistant.main:replay"
test = "aurora_shopping_assistant.main:test"
run_with_trigger = "aurora_shopping_assistant.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
